--- a/css/main.css
+++ b/css/main.css
@@ -27,3 +27,24 @@ body {
   display: block;
   width: 100%;
 }
+
+figure {
+  margin: 0;
+  position: relative;
+}
+
+figcaption {
+  position: absolute;
+  bottom: .5em;
+  left: .5em;
+  max-width: 15em;
+
+background-color: rgba(0, 0, 0, .5);
+color: #fff;
+border-radius: 8px;
+}
+
+p{
+  margin: 0;
+  padding: 1em;
+}
