--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
 
   box-sizing: border-box;
 
-  font: normal 100%/1.3 "Roboto Slab" , serif;
+  font: normal 100%/1.3 "Roboto Slab", serif;
 }
 
 *, *::before, *::after {
@@ -35,16 +35,16 @@ figure {
 
 figcaption {
   position: absolute;
-  bottom: .5em;
-  left: .5em;
+  bottom: .5rem;
+  left: .5rem;
   max-width: 15em;
 
-background-color: rgba(0, 0, 0, .5);
-color: #fff;
-border-radius: 8px;
+  background-color: rgba(0, 0, 0, .5);
+  color: #fff;
+  border-radius: 8px;
 }
 
-p{
+p {
   margin: 0;
-  padding: 1em;
+  padding: 1rem;
 }
